Add Azure SQL Database Serverless integration for MAC history

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,4 +4,6 @@ azure-functions>=1.17.0
 # GRRI-MAC Framework dependencies
 requests>=2.31.0
 python-dotenv>=1.0.0
-yfinance>=0.2.36
+
+# Database (Azure SQL)
+pyodbc>=5.0.0
