--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,7 @@ azure-functions>=1.17.0
 # GRRI-MAC Framework dependencies
 requests>=2.31.0
 python-dotenv>=1.0.0
+beautifulsoup4>=4.12.0
 
 # Database (Azure Table Storage)
 azure-data-tables>=12.4.0
