Clean up codebase: remove one-time utility scripts, unused endpoints, and temp files
Removed:
- upload_backtest_to_azure.py (one-time data upload script)
- check_backtest_progress.py (debug utility)
- BACKTEST_STATUS.md, CLAUDE_MAC_CONTEXT.md (session notes)
- api/refresh_backtest/ (unused - times out in serverless)
- api/upload_backtest/ (incomplete endpoint)
- real_data_pull.json (temp debug output)
- Duplicate docs

Updated .gitignore for mypy_cache and temp files

--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,12 @@ Thumbs.db
 
 # Testing
 .pytest_cache/
+.mypy_cache/
 .coverage
 htmlcov/
+
+# Type checking
+.mypy_cache/
 
 # Azure
 .azure/
@@ -67,3 +71,6 @@ local.settings.json
 
 # SWA CLI
 .swa/
+
+# Temporary analysis outputs
+real_data_pull.json
