feat: 7-pillar MAC framework with 54-year backtest (1971-2025)
- Extended backtest coverage from 1998 to 1971 using historical proxies
- Added 7th pillar: Private Credit stress monitoring
- Implemented historical proxy methodology for pre-1986 data gaps:
  - Realized volatility from NASDAQ Composite (pre-VIX)
  - Moody's Baa corporate spreads (pre-OAS)
  - Fed Funds-T-Bill spread (funding stress proxy)
- Achieved 81.5% true positive rate (22/27 crises detected)
- Updated frontend UI for 7-pillar display and date range selection
- Added Azure Tables seeding script for FRED series and backtest cache
- Renamed daily-refresh to weekly-refresh workflow (data updates weekly)
- Updated all documentation for academic paper submission

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ SEC_USER_AGENT=Your Company research@yourdomain.com
 # Database Configuration
 # Path to SQLite database file (default: ./data/mac.db)
 MAC_DB_PATH=./data/mac.db
+
+#FGF-Disclosure
+CompaniesHouse_API_KEY=20a99151-53f9-4e21-afc7-2d39c36908d6
