--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -9,6 +9,9 @@ beautifulsoup4>=4.12.0
 # Database (Azure Table Storage)
 azure-data-tables>=12.4.0
 
+# Data Lake (Azure Blob Storage)
+azure-storage-blob>=12.19.0
+
 # CFTC COT positioning data
 cot-reports>=0.1.3
 pandas>=2.0.0
