--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@ yfinance>=0.2.28
 python-dateutil>=2.8.2
 python-dotenv>=1.0.0
 
+# Azure Data Lake (Blob Storage)
+azure-storage-blob>=12.19.0
+pyarrow>=14.0.0
+
 # Testing
 pytest>=7.4.0
 pytest-cov>=4.1.0
