Gitignore data files — now stored in Azure Blob Storage
Removed 39 data files from git tracking (kept locally).
All data is now in Azure fgfmacstorage containers:
  mac-raw-data (69 blobs), mac-cleaned-data (59 blobs)

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,18 @@ local.settings.json
 
 # Temporary analysis outputs
 real_data_pull.json
+
+# Data lake (raw + cleaned blobs stored in Azure, not in git)
+data/datalake/
+
+# Large data files (downloaded/generated, stored in Azure)
+data/fred_cache/
+data/historical/
+data/backtest_results/
+data/gpr_data.xls
+data/historical_indicators.json
+data/historical_mac_results.json
+data/private_credit_analysis.json
+data/competitor_indices.json
+data/grs_data_sources.json
+data/mac.db
